--- a/styles/master.css
+++ b/styles/master.css
@@ -1,5 +1,9 @@
 @import "reset.css";
 @import "fonts.css";
+
+:root {
+  --grey: #949494;
+}
 body {
   font-family: 'M PLUS Rounded 1c', sans-serif;
 }
@@ -7,4 +11,199 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   box-sizing: border-box;
+}
+img {
+  max-width: 100%;
+}
+header {
+  height: 60px;
+  background: #000;
+  padding-left: 0 16px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+@media (min-width: 768px) {
+  header {
+    padding: 0 24px;
+  }
+}
+ /* section intro */
+.intro{
+ font-weight: 800;
+ padding: 0 16px 16px 16px;
+ text-align: center;
+}
+.intro h1,
+.intro h2 {
+  text-align: center;
+}
+.intro h1 {
+  font-size: 20px;
+  padding: 56px 0 8px;
+}
+.intro h2 {
+  font-size: 40px;
+  padding-bottom: 40px;
+}
+.intro img {
+  width: 275px;
+}
+.intro p {
+  font-size: 20px;
+  line-height: 28px;
+  color:var(--grey);
+  margin: 40px 0;
+  text-align: left;
+}
+.intro p em {
+  color: #000;
+}
+@media (min-width: 768px) {
+  .intro{
+   padding: 0 24px 8px 24px;
+  }
+  .intro h1 {
+    font-size: 40px;
+    padding: 96px 0 16px;
+  }
+  .intro h2 {
+    font-size: 80px;
+    padding-bottom: 72px;
+  }
+  .intro img {
+    text-align: center;
+    width: 661px;
+  }
+  .intro p {
+    font-size: 36px;
+    line-height: 48px;
+    margin: 72px 0;
+  }
+}
+
+
+ /* section perks */
+
+ .perks {
+   font-weight: 800;
+ }
+ .perks img {
+   width: 100%;
+ }
+ .perks ul {
+   padding: 0 16px 80px 16px;
+   font-size: 20px;
+   line-height: 28px;
+ }
+ .perks li {
+   color: var(--grey);
+   padding: 16px 0 48px;
+   border-bottom: 1px solid #E5E5E5;
+ }
+ .perks li em {
+   color: #000;
+   display: block;
+ }
+ @media (min-width: 788px) {
+   .perks ul {
+     padding: 0 24px 128px 24px;
+     font-size: 36px;
+     line-height: 48px;
+   }
+   .perks li {
+     padding: 32px 0 88px;
+   }
+ }
+
+
+ /* section about */
+
+ .about {
+  font-weight: 800
+ }
+ .about h2 {
+  color: var(--grey);
+  font-size: 40px;
+  line-height: 44px;
+  padding: 0 16px;
+ }
+ .about h2 em {
+  color: #000;
+  display: block;
+  margin-bottom: 40px;
+ }
+ .about img {
+  min-width: 100%;
+ }
+ .about p {
+   color: var(--grey);
+   font-size: 20px;
+   line-height: 28px;
+   padding: 24px 16px 80px 16px;
+ }
+ .about p em {
+   color: #000;
+ }
+ @media (min-width: 768px) {
+   .about h2 {
+    font-size: 80px;
+    line-height: 96px;
+    padding: 0 24px;
+    margin-bottom: 80px;
+   }
+   .about p {
+     font-size: 36px;
+     line-height: 48px;
+     padding: 32px 24px 128px 24px;
+   }
+ }
+
+/* section shop */
+
+.shop {
+  font-weight: 500;
+}
+.shop h2 {
+  color: var(--grey);
+  font-size: 40px;
+  line-height: 44px;
+  padding: 0 16px;
+  font-weight: 800;
+}
+.shop h2 em {
+ color: #000;
+ display: block;
+ margin-bottom: 48px;
+}
+.shop__item {
+  border-radius: 24px;
+  box-shadow: 0px 4px 40px rgba(0, 0, 0, 0.08);
+  margin: 0 16px 56px 16px;
+  padding: 40px 24px 24px 24px;
+
+}
+.shop h3 {
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 24px;
+  padding: 32px 0 8px 0;
+}
+.shop p {
+  font-size: 14px;
+  line-height: 24px;
+  color: var(--grey);
+  padding-bottom: 32px;
+}
+.shop a {
+  background: #1B76FF;
+  border-radius: 8px;
+  color: #FFF;
+  font-size: 18px;
+  line-height: 24px;
+  padding: 14px 39px;
+  font-weight: 800;
+  text-align: center;
+  margin-bottom: 24px;
+  text-decoration: none;
 }
