--- a/styles/master.css
+++ b/styles/master.css
@@ -48,7 +48,10 @@ header {
 }
 .intro img {
   width: 275px;
+  animation:
+   jello 2s ease infinite;
 }
+
 .intro p {
   font-size: 20px;
   line-height: 28px;
@@ -182,7 +185,10 @@ header {
   box-shadow: 0px 4px 40px rgba(0, 0, 0, 0.08);
   margin: 0 16px 56px 16px;
   padding: 40px 24px 24px 24px;
-
+  transition: box-shadow 300ms ease-in-out;
+}
+.shop__item:hover {
+  box-shadow: 0px 8px 56px rgba(0, 0, 0, 0.25);
 }
 .shop h3 {
   font-weight: 800;
@@ -207,6 +213,11 @@ header {
   text-align: center;
   margin-bottom: 24px;
   text-decoration: none;
+  transition: background 200ms linear;
+}
+.shop a:hover {
+  background: green;
+  filter: hue-rotate(45deg);
 }
 .shop a:last-child {
   padding: 14px 33px;
